# scotschotte

./: .gitignore  Cargo.toml  build.rs
shaders/: fragment.glsl  vertex.glsl
src/: components.rs  main.rs  main_vk_stuff.rs  ui.rs  ui_util.rs
src/components/: document_system.rs  menu_manager.rs  schotte_core.rs
src/ui/: file_menu.rs  menu_manager.rs  root_window.rs  util.rs
